--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
       <!-- Join -->
       <section id="join">
         <div class="group">
-          <div class="item">
+          <div class="item item-double">
             <img src="images/love.png" alt="ThinkfulCupid - love" />
           </div>
         <!-- Add join form here -->
+        <div>
         <h2>Find your perfect match</h2>
         <form>
           <div>
@@ -63,6 +64,7 @@
           <div>
             <button type="submit">Join</button>
           </div>
+        </div>
        </div>
       </form>
       </section>
@@ -70,15 +72,18 @@
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
+        <div class="row">
         <img
           src="images/sunset-with-heart.png"
           alt="ThinkfulCupid - Sunset with heart"
+          class="item"
         />
         <img
           src="images/two-people-sunset-candles.png"
           alt="ThinkfulCupid - Two people with sunset and candles"
+          class="item"
         />
-        <p>
+        <p class="item-double">
           Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
           fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
           porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
@@ -88,6 +93,7 @@
           tristique vestibulum. In hac habitasse platea dictumst. Vestibulum sit
           amet pretium quam.
         </p>
+      </div>
       </section>
 
       <!-- Download -->
