--- a/index.html
+++ b/index.html
@@ -72,17 +72,22 @@
       <!-- About -->
       <section id="about" class="alternate-background">
         <h2>About</h2>
-        <div class="row">
+        <div class="row central">
+          <div class="item">
         <img
           src="images/sunset-with-heart.png"
           alt="ThinkfulCupid - Sunset with heart"
           class="item"
         />
+          </div>
+          <div class="item">
         <img
           src="images/two-people-sunset-candles.png"
           alt="ThinkfulCupid - Two people with sunset and candles"
           class="item"
         />
+      </div>
+      <div class="item item-double">
         <p class="item-double">
           Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
           fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
@@ -94,10 +99,13 @@
           amet pretium quam.
         </p>
       </div>
+      </div>
       </section>
 
       <!-- Download -->
       <section id="download">
+        <div class="row central">
+          <div class="item">
         <h2>Download the App</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
@@ -116,14 +124,19 @@
             hendrerit mauris.
           </li>
         </ul>
+      </div>
 
+      <div class="item">
         <img src="images/download.png" alt="Thinkfulbnb - download" />
+      </div>
+      </div>
       </section>
 
       <!-- Blog -->
       <section id="blog" class="alternate-background">
         <h2>Blog</h2>
-
+        <div class="container">
+          <div class="box">
         <img src="images/blog-post-1.png" alt="Thinkfulbnb - blog post 1" />
         <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
         <p>
@@ -132,7 +145,9 @@
           dolor quam, mattis at nibh sed, tincidunt malesuada turpis. Nam dictum
           dapibus neque, sed vehicula neque tristique vestibulum.
         </p>
+      </div>
 
+      <div class="box">
         <img src="images/blog-post-2.png" alt="Thinkfulbnb - blog post 2" />
         <h3>Mauris eget nisl quis metus ultrices venenatis</h3>
         <p>
@@ -141,7 +156,8 @@
           dolor quam, mattis at nibh sed, tincidunt malesuada turpis. Nam dictum
           dapibus neque, sed vehicula neque tristique vestibulum.
         </p>
-
+        </div>
+        <div class="box">
         <img src="images/blog-post-3.png" alt="Thinkfulbnb - blog post 3" />
         <h3>
           Fusce augue diam, sollicitudin at metus id, congue placerat neque
@@ -152,7 +168,8 @@
           dolor quam, mattis at nibh sed, tincidunt malesuada turpis. Nam dictum
           dapibus neque, sed vehicula neque tristique vestibulum.
         </p>
-
+      </div>
+        <div class="box">
         <img src="images/blog-post-4.png" alt="Thinkfulbnb - blog post 4" />
         <h3>Aenean purus dui, aliquam vitae auctor vel</h3>
         <p>
@@ -161,6 +178,8 @@
           dolor quam, mattis at nibh sed, tincidunt malesuada turpis. Nam dictum
           dapibus neque, sed vehicula neque tristique vestibulum.
         </p>
+      </div>
+      </div>
       </section>
     </main>
 
